weblate/static/styles/main.css
/* ... */
.space-tab::before {
  content: "→";
  position: relative;
}

.space-nl::before,
.token.newline::before {
  content: "↵";
  position: relative;
}

.space-space::before {
  content: "·";
  position: relative;
  left: 25%;
}

ins,
ins .hlcheck,
span.replacement {
  background-color: lightgreen;
  color: #2a3744;
}

del,
del .hlcheck,
span.replaced {
  color: #2a3744;
  background-color: #fc7979;
}

.editor-toolbar {
  margin: 3px 0;
}

.panel-body .table-condensed {
  margin-bottom: 0;
}

td .list-group {
  margin-bottom: 0;
}

.code-example {
  font-family: monospace;
  white-space: pre;
  height: auto;
}

.sort-cell {
  white-space: nowrap;
}
.sort-cell,
.sort-cell a {
  cursor: pointer;
  color: #2a3744;
}

.sort-cell:hover,
.sort-cell:hover a {
  color: #1fa385;
  text-decoration: none;
}

.sort-icon {
  width: 8px;
  height: 8px;
  display: inline-block;
  margin: 0 5px;
}

th .sort-icon.sort-up {
  background-image: url("sort/up.svg");
}

th .sort-icon.sort-down {
  background-image: url("sort/down.svg");
}

th:hover .sort-icon {
  background-image: url("sort/hover-down.svg");
}

th:hover .sort-icon.sort-up {
  background-image: url("sort/hover-up.svg");
}

.asteriskField {
  display: none;
}

.subscription-checkboxes label {
  margin-left: 20px;
  font-weight: normal;
}

.subscription-checkboxes input {
  margin-left: 0;
}

.engage {
  text-align: center;
  padding-top: 6em;
}

.engage h1 {
  font-size: 56px;
  font-weight: normal;
  padding-bottom: 0.5em;
  letter-spacing: -0.46px;
}

.engage h2 {
  font-size: 20px;
  font-weight: normal;
  padding-bottom: 0.5em;
  line-height: 1.5em;
  letter-spacing: 0.65px;
}

.engage p {
  line-height: 1.5em;
  font-size: 16px;
}

.engage .buttons {
  padding: 3em;
}

@media (max-width: 768px) {
  .engage .buttons {
    padding: 3em 0;
  }
}

.engage .buttons a {
  margin: 1em;
}

.bignumbers {
  padding: 1em 0;
}

.bignumbers .col-md-4:first-child {
  border-left: none;
}

.bignumbers strong {
  display: block;
  font-weight: normal;
  font-size: 56px;
  letter-spacing: -1px;
}

.bignumbers p {
  font-size: 20px;
  text-transform: uppercase;
  letter-spacing: 2px;
}

@media only screen and (max-width: 992px) {
  .engage {
    padding-top: 2em;
  }
}

@media only screen and (min-width: 992px) {
  .bignumbers .col-md-4 {
    border-left: 1px solid gray;
  }
}

@media only screen and (min-width: 1200px) {
  .bignumbers {
    padding: 3em 1em;
  }
}

.btn-inline {
  font-weight: 600;
  padding: 0 20px;
}
.formats .btn-inline {
  padding: 0;
}

.btn-desc p {
  display: inline-block;
}

.btn-desc {
  margin: 5px 0;
}

.btn-spaced {
  margin: 5px;
  margin-left: 10px;
}

.btn-full {
  width: 100%;
}

.btn-auth {
  padding: 5px;
}

.btn-auth a {
  display: block;
  width: 100%;
  font-weight: 600;
  text-align: left;
}

.dir-rtl .btn-auth a {
  text-align: right;
}

.login-links,
.login-label {
  display: block;
  clear: both;
  margin: 10px 5px 5px 5px;
}

.login-links,
form + .login-label {
  border-top: 1px solid #ccc;
  padding: 10px 0;
}

.login-label {
  font-size: normal;
  font-weight: 600;
}

.login-links {
  text-align: center;
}

.login-links li {
  display: inline;
  list-style: none;
}

.login-links li + li::before {
  content: "•";
  margin: 0 8px;
}

.btn-auth .auth-image {
  width: 20px;
  height: 20px;
}

#information .table {
  display: block;
  overflow-x: auto;
}

.table-auth .auth-image {
  margin-right: 12px;
}

.dir-rtl .table-auth .auth-image {
  margin-right: 0;
  margin-left: 12px;
}

.table .history-row td {
  border-top: none;
}
.history-row + .history-row td {
  border-top: 1px solid #e9eaec;
}

.history-event,
.history-event ol,
.history-data .text-muted {
  font-size: 14px;
}

.history-data {
  padding-bottom: 4px;
}

.history-event ol,
.history-event p {
  margin-left: 34px;
  padding: 0;
}

.container-gapped {
  display: flex;
  flex-direction: column;
  gap: 40px;
}

.comment-content {
  border-radius: 0 5px 5px 5px;
  background-color: #e5f0f2;
  padding: 8px 10px;
  word-wrap: break-word;
}
.comment-content blockquote {
  border-left: 5px solid #ddd;
}

.comment-source {
  background-color: #f2e5ea;
}

.comment-resolved {
  background-color: #fff;
  color: #bfc3c7;
}

#suggestions {
  margin-top: 55px;
}

#changes-table {
  margin-top: 40px;
  width: 100%;
}

#changes-list {
  display: flex;
  flex-direction: column;
  gap: 30px;
}

.btn-float {
  display: flex;
  gap: 5px;
  padding: 4px;
  background-color: #fff;
  box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.1);
  border-radius: 5px;
  position: absolute;
  right: 15px;
  transform: translateY(-100%);
  z-index: 10;
}

@media only screen and (max-width: 600px) {
  .btn-float {
    box-shadow: none;
    transform: none;
  }

  #comments #comment-section {
    display: flex;
    flex-direction: column;
    width: 100%;
  }

  #changes-table {
    margin-top: 20px;
  }

  #changes-list {
    display: flex;
    flex-direction: column;
    gap: 20px;
  }

  #changes-item {
    display: flex;
    flex-direction: column;
  }

  #changes-item .full-cell {
    border-top: none;
  }
}

.btn-float .btn,
.btn-padded .btn {
  padding: 2px 4px !important;
  line-height: 0;
}

kbd {
  border: 1px solid #bfc3c7;
  -webkit-box-shadow: none;
  box-shadow: none;
  font-size: 14px;
  user-select: none;
  -moz-user-select: none;
  -webkit-user-select: none;
  -ms-user-select: none;
}

.zen {
  table-layout: auto;
  width: 100%;
}

.zen-unit:nth-child(even) {
  background-color: #f9f9f9;
}

.position-input-editable {
  padding: 0 !important;
  max-width: 9em;
  display: none;
}

.position-input-editable input {
  height: 31px;
  padding-left: 2px;
  padding-right: 2px;
  text-align: center;
}

/* Chrome, Safari, Edge, Opera */
.position-input-editable input::-webkit-outer-spin-button,
.position-input-editable input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

/* Firefox */
.position-input-editable input[type="number"] {
  -moz-appearance: textfield;
}
/* ... */

